%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-7085178209481360912
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -274648685875457736}
    m_Position: {x: 330, y: 10, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -274648685875457736}
--- !u!1107 &-5262379638497114484
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: UpperBody
  m_ChildStates: []
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 0}
--- !u!1102 &-274648685875457736
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: GoblinMovement
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 2263684718179748404}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: GoblinAnimCon
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: XSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: YSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Attack
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -7085178209481360912}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: UpperBody
    m_StateMachine: {fileID: -5262379638497114484}
    m_Mask: {fileID: 31900000, guid: af647b7f8454af242a8ba7d18801e8b8, type: 2}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &2263684718179748404
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f87fe73589d73d247b4c9a5817cce64f, type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c1f9d855395a96444ae8906dd9852d96, type: 2}
    m_Threshold: 0.083333336
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 8890cd48924feea449153be8def6facc, type: 2}
    m_Threshold: 0.16666667
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 55dc435c6f5e31643b7b5e402d12ac1a, type: 2}
    m_Threshold: 0.25
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 55dc435c6f5e31643b7b5e402d12ac1a, type: 2}
    m_Threshold: 0.33333334
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: XSpeed
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c75c8742bb621a24c9b58c0e204aa039, type: 2}
    m_Threshold: 0.41666666
    m_Position: {x: 0.95, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c75c8742bb621a24c9b58c0e204aa039, type: 2}
    m_Threshold: 0.5
    m_Position: {x: 0.51, y: 0.48}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c75c8742bb621a24c9b58c0e204aa039, type: 2}
    m_Threshold: 0.5833333
    m_Position: {x: -0.85, y: 0.92}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c75c8742bb621a24c9b58c0e204aa039, type: 2}
    m_Threshold: 0.6666667
    m_Position: {x: -0.53, y: 0.48}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f8d43866a64ffe742a15197f9de3c373, type: 2}
    m_Threshold: 0.75
    m_Position: {x: -0.44, y: -0.42}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f8d43866a64ffe742a15197f9de3c373, type: 2}
    m_Threshold: 0.8333333
    m_Position: {x: 0.49, y: -0.48}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f8d43866a64ffe742a15197f9de3c373, type: 2}
    m_Threshold: 0.9166667
    m_Position: {x: 0.93, y: -0.95}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f8d43866a64ffe742a15197f9de3c373, type: 2}
    m_Threshold: 1
    m_Position: {x: -0.95, y: -0.81}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XSpeed
    m_Mirror: 0
  m_BlendParameter: XSpeed
  m_BlendParameterY: YSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
